scrollbar width fix

--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -105,14 +105,10 @@ img {
   -moz-user-drag: none;
 }
 
-/* basic fluid type */
-html {
-  --fluid-width: 1920;
-  font-size: clamp(12px, calc(((22 / var(--fluid-width)) * 100) * 1vw), 16px);
-}
 
 /* main styles */
 body {
+  width: 100%;
   @apply font-sans text-base text-white bg-black;
 }
 
@@ -127,16 +123,12 @@ main {
     justify-content: center;
     align-items: center;
   }
-
-  .contain {
-    @apply mx-auto;
-    max-width: var(--max-w);
-  }
 }
 
 html,
 body {
   height: 100%;
+  width: 100%;
   overflow: hidden;
   overscroll-behavior-y: none;
 }
